Compiles and runs on Windows with the V6 call drivers and TiNG 2.
#1 is imperfectly resolved: pyAculab will run only on XP.


git-svn-id: file:///Library/svn/aculab/trunk@392 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/Makefile
+++ b/python/Makefile
@@ -7,7 +7,12 @@ find_v6 := $(strip $(wildcard $(ACULAB_ROOT)/include/cl_lib.h))
 
 # include the appropriate definitions
 ifeq ($(find_init),)
-  include win32.mk
+  ifeq ($(ACULAB_ROOT),)
+    # Later versions use ACULAB_ROOT - v5 uses the Registry
+    include win32_v5.mk
+  else
+    include win32.mk
+  endif
 else
   ifeq ($(ACULAB_ROOT),)
     $(error "ACULAB_ROOT not set")
