Maintenance of the Makefiles was becoming too irritating; switched to distutils exclusively.
git-svn-id: file:///Library/svn/aculab/trunk@396 cae33c24-edb7-11db-8150-7705e9bc5c8f

--- a/python/Makefile
+++ b/python/Makefile
@@ -1,93 +1,16 @@
-# check for signs of Unix
-find_init := $(strip $(wildcard /sbin/init) \
-	                 $(wildcard /usr/sbin/init))
-
-# check for signs of Aculab v6
-find_v6 := $(strip $(wildcard $(ACULAB_ROOT)/include/cl_lib.h))
-
-# include the appropriate definitions
-ifeq ($(find_init),)
-  ifeq ($(ACULAB_ROOT),)
-    # Later versions use ACULAB_ROOT - v5 uses the Registry
-    include win32_v5.mk
-  else
-    include win32.mk
-  endif
-else
-  ifeq ($(ACULAB_ROOT),)
-    $(error "ACULAB_ROOT not set")
-  endif
-
-  ifneq ($(find_v6),)
-    include unix.mk
-  else
-    include unix_v5.mk
-  endif
-endif
-
-# By default, the SWIG include dirs are ACULAB_INCLUDE
-# cygwin needs an exception
-ifeq ($(SWIG_INCLUDE),)
-SWIG_INCLUDE := $(ACULAB_INCLUDE)
-endif
-
-all: aculab/_lowlevel$(SO) aculab/lowlevel.py
-
-# To generate a patch, (with the example cl_lib.h), copy a the original 
-# cl_lib.h to cl_lib.h2, edit it, and then do:
-# diff -u $(DTK)/include/cl_lib.h cl_lib.h2 > cl_lib.patch
-
-
-ifneq ($(find_v6),)
-cl_lib.h2: $(DTK)/include/cl_lib.h cl_lib.patch
-	patch -o $@ $(DTK)/include/cl_lib.h cl_lib.patch
-
-acu_type.h2: $(DTK)/include/acu_type.h acu_type.patch
-	patch -o $@ $(DTK)/include/acu_type.h acu_type.patch
-
-#res_lib.h2: $(DTK)/include/res_lib.h res_lib.patch
-#	patch -o $@ $(DTK)/include/res_lib.h res_lib.patch
-
-#actiff.h2: $(DTK)/$(FAX)/include/actiff.h actiff.patch
-#	patch -o $@ $(DTK)/$(FAX)/include/actiff.h actiff.patch
-
-#bfile.h2: $(DTK)/ting/include/bfile.h bfile.patch
-#	patch -o $@ $(DTK)/ting/include/bfile.h bfile.patch
-
-# builds are very slow - only rebuild if cl_lib.h changes
-# exclude structures that are %extended already
-sized_struct.i: $(DTK)/include/cl_lib.h $(DTK)/include/sw_lib.h
-	$(SWIG) $(DEFINES) $(SWIG_DEFINES) $(SWIG_INCLUDE) -xml -xmllite lowlevel.i
-	python sized_struct.py -x ACU_SNAPSHOT_PARMS lowlevel_wrap.xml
-	rm lowlevel_wrap.xml
-
-lowlevel_wrap.c aculab/lowlevel.py: lowlevel.i cl_lib.h2 acu_type.h2 sized_struct.i
-	$(SWIG) $(SWIG_DEFINES) -modern -new_repr -python $(DEFINES) $(SWIG_INCLUDE) $<
-	mv lowlevel.py aculab
-
-else
-smosintf.h2: $(DTK)/speech/include/smosintf.h smosintf.patch
-	patch -o $@ $(DTK)/speech/include/smosintf.h smosintf.patch
-
-lowlevel_wrap.c aculab/lowlevel.py: lowlevel.i smosintf.h2
-	$(SWIG) $(SWIG_DEFINES) -modern -new_repr -python $(DEFINES) $(SWIG_INCLUDE) $<
-	mv lowlevel.py aculab
-endif
-
-aculab/_lowlevel$(SO): $(OBJS)
-	$(CC) $(LDFLAGS) -o $@ $(OBJS) $(EXTRA_OBJS) $(PYTHON_LIBDIR) \
-		$(ACULAB_LIBDIR) $(PYTHON_LIBS) $(ACULAB_LIBS) $(POST_LDFLAGS)
-
-%$(O): %.c
-	$(CC) -c $(C_DEFINES) $(ACULAB_INCLUDE) $(PYTHON_INCLUDE) $< -o $@ 
+all: 
+	python setup.py build_ext -i
 
 install:
-	python disthelper.py aculab
+	python setup.py install
 
 clean:
-	rm -f aculab/*$(SO) *$(O) aculab/*.pyc \
-		lowlevel.py *_wrap.c *_wrap.doc MANIFEST $(CRUFT)
+	rm -f aculab/*.pyd aculab/*.pyc \
+		lowlevel.py *_wrap.c *_wrap.doc MANIFEST
 	rm -rf build dist
+
+wininst_publish:
+	scp dist/*.exe borel:/Library/WWW/aculab
 
 distclean: clean
 	rm -f *.h2 sized_struct.i
